# AudioConverter

./: CMakeLists.txt  README.md  main.cpp
include/: converter.h  directory.h  encoder.h  mp3encoder.h
src/: converter.cpp  directory.cpp  main.cpp  mp3encoder.cpp
